# app-diagnostico-financiero-local

./: .editorconfig  .gitattributes  .gitignore  .npmrc  .prettierignore  CONTRIBUTING.md  MVP-Financiero-Local_ Tecnologías-y-SCRUM.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: Plantilla-diagnóstico-financiero-(Ejemplo).xlsx  analisis-plantilla-financiera.md
openspec/changes/mvp-financiero-local-first/: MVP-COMPLETE.md  README.md  design.md  explore.md  proposal.md  slice-10-test-plan.md  slice-11-test-plan.md  slice-12-test-plan.md  slice-13-test-plan.md  slice-2-test-plan.md  slice-3-test-plan.md  slice-4-test-plan.md  slice-5-test-plan.md  slice-6-test-plan.md  slice-7-test-plan.md  slice-8-test-plan.md  slice-9-test-plan.md  spec.md  tasks.md
scripts/: extract_xlsx.py  generar_analisis_md.py  tauri-dev.cmd  test-all.ps1
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_inicial.sql
src-tauri/src/: commands.rs  db.rs  kpis.rs  lib.rs  main.rs  migrations.rs  path.rs  plugin.rs  seeds.rs
src-tauri/src/simulador/: mod.rs  repo.rs
src-tauri/src/transacciones/: mod.rs  repo.rs
src-tauri/tests/: capabilities_test.rs  categorias_seed_test.rs  commands_test.rs  db_path_test.rs  kpis_test.rs  migrations_test.rs  simulador_repo_test.rs  sql_plugin_test.rs  transacciones_aggregate_test.rs  transacciones_repo_test.rs
src-tauri/tests/common/: mod.rs
src/__tests__/: App.test.tsx  precision.test.ts  setup.ts  smoke.test.ts
src/components/molecules/: TransaccionForm.tsx
src/components/molecules/__tests__/: TransaccionForm.test.tsx
src/components/organisms/: DistribucionChart.tsx  ListaTransacciones.tsx  MatrizPresupuesto.tsx  SelectorPerfil.tsx  SimuladorPanel.tsx
src/components/organisms/__tests__/: DistribucionChart.test.tsx  ListaTransacciones.test.tsx  MatrizPresupuesto.test.tsx  SelectorPerfil.test.tsx  SimuladorPanel.test.tsx
src/data/: categorias-seed.ts  perfil-activo.ts  tauri-commands.ts
src/data/__tests__/: perfil-activo.test.ts  tauri-commands.test.ts
src/domain/agregaciones/: graficos.ts  index.ts  matriz.ts
src/domain/agregaciones/__tests__/: golden-mvp.test.ts  graficos.test.ts  matriz.test.ts
src/domain/kpis/: index.ts
src/domain/kpis/__tests__/: golden-excel.test.ts  index.test.ts
src/domain/normalizacion/: index.ts
src/domain/normalizacion/__tests__/: index.test.ts
src/domain/precision/: money.ts
src/domain/precision/__tests__/: money-form.test.ts
src/domain/simulador/: debounce.ts  filtro.ts  matriz-mejorada.ts
src/domain/simulador/__tests__/: debounce.test.ts  filtro.test.ts  matriz-mejorada.test.ts
