[package]
name = "app-diagnostico-financiero-local"
version = "0.1.0"
description = "Diagnostico Financiero Local-First - Escritorio Tauri v2 + React"
authors = ["hetan"]
edition = "2021"
rust-version = "1.77"

# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
[lib]
name = "app_diagnostico_financiero_local_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Slice 2 (Épica 1, HU-102/103) — el backend Rust necesita hablar
# SQLite directamente para correr migraciones contra un Connection
# (en producción contra misfinanzas.db, en tests in-memory). `sha2` se
# usa para hashear el SQL aplicado y detectar drift en _migrations.
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"

[features]
# this feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
